Add the CQH for the ADD Update Delete Basket

--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "CacheSetting": {
+    //6379 is the default port for redis
+    "ConnectionString": "localhost:6379"
+  }
 }
