--- a/Services/Basket/Basket.API/Dockerfile
+++ b/Services/Basket/Basket.API/Dockerfile
@@ -5,6 +5,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
+EXPOSE 443
 
 
 # This stage is used to build the service project
