--- a/Services/Discount/Discount.Infrastructure/Discount.Infrastructure.csproj
+++ b/Services/Discount/Discount.Infrastructure/Discount.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" />
 	  <!--gRPC is a language agnostic, high-performance Remote Procedure Call (RPC) framework.    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />-->
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
