--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password:Password@1;"
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=Password@1;"
   },
   "Logging": {
     "LogLevel": {
