setting the Grpc Client

--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -2,5 +2,9 @@
   "CacheSetting": {
     //6379 is the default port for redis
     "ConnectionString": "localhost:6379"
+  },
+  //this is the url where grpc server is running
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:8002"
   }
 }
