--- a/Services/Discount/Discount.API/Properties/launchSettings.json
+++ b/Services/Discount/Discount.API/Properties/launchSettings.json
@@ -8,6 +8,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
+      //this url is just for local debugging for (Browser not of Docker as urs running on docker)
+      //docker  http://localhost:8002 check the override
       "applicationUrl": "http://localhost:5009"
     },
     "IIS Express": {
