--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -57,6 +57,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSetting__ConnectionString=basketdb:6379"
+      - "GrpcSettings__DiscountUrl=http://localhost:8002"
     depends_on: 
      - basketdb
     ports:
