Grpc.Core.RpcException: Status(StatusCode="Unavailable", Detail="Error connecting to subchannel.", DebugException="System.Net.Sockets.SocketException: Connection refused")  ---> System.Net.Sockets.SocketException (111): Connection refused
and also changed the discount url to http://discount.api:8080

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -57,7 +57,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSetting__ConnectionString=basketdb:6379"
-      - "GrpcSettings__DiscountUrl=http://localhost:8002"
+      - "GrpcSettings__DiscountUrl=http://discount.api:8080"
     depends_on: 
      - basketdb
     ports:
