--- a/Services/Ordering/Order.Application/Order.Application.csproj
+++ b/Services/Ordering/Order.Application/Order.Application.csproj
@@ -9,5 +9,17 @@
   <ItemGroup>
     <ProjectReference Include="..\Order.Core\Order.Core.csproj" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<PackageReference Include="FluentValidation" Version="11.9.2" />
+		<PackageReference Include="MediatR" Version="12.3.0" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Mappers\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
 
 </Project>
