--- a/Services/Ordering/Order.API/Order.API.csproj
+++ b/Services/Ordering/Order.API/Order.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
