docker configured and ILogger exception is good now

--- a/Services/Ordering/Order.API/appsettings.json
+++ b/Services/Ordering/Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OrderConnectionString": "Server=Anya;Database =OrderDb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
