--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -76,3 +76,11 @@ services:
    
 
 
+
+  order.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+    ports:
+      - "8080"
+
