fixed the connectionstring and docker settings

--- a/Services/Ordering/Order.API/appsettings.json
+++ b/Services/Ordering/Order.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderConnectionString": "Server=Anya;Database =OrderDb;"
+    "OrderingConnectionString": "Server=Anya;Database=OrderDb;TrustServerCertificate=True;Trusted_Connection=True;Encrypt=True;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
