--- a/Services/Ordering/Order.API/Order.API.csproj
+++ b/Services/Ordering/Order.API/Order.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
 	  <PackageReference Include="Polly" Version="8.4.1" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7"/>
   </ItemGroup>
 
   <ItemGroup>
