--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
   pgadmin:
     image: dpage/pgadmin4
 
+  orderdb:
+    image: mcr.mirosoft.com/mssql/server:2022-latest
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -35,9 +38,11 @@ services:
       context: .
       dockerfile: Services/Ordering/Order.API/Dockerfile
 
+
 volumes:
   mongo_data:
   postgres_data:
   pgadmin_data:
+  orderdb-data:
 
 
