--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     image: dpage/pgadmin4
 
   orderdb:
-    image: mcr.mirosoft.com/mssql/server:2022-latest
+    # image: mcr.mirosoft.com/mssql/server:2022-latest
+    image:  mcr.microsoft.com/mssql/server:2019-latest
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
