json file path corrected

--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "DatabaseSettings": {
+    //"ConnectionString": "mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.2",
     "ConnectionString": "mongodb://127.0.0.1:27017?readPreference=primary&ssl=false",
     "DatabaseName": "CatalogDb",
     "CollectionName": "Products",
