--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -6,5 +6,8 @@
   //this is the url where grpc server is running
   "GrpcSettings": {
     "DiscountUrl": "http://localhost:8002"
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:7652"
   }
 }
