--- a/Services/Ordering/Order.API/appsettings.json
+++ b/Services/Ordering/Order.API/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:7652"
+  },
   "AllowedHosts": "*"
 }
