--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -8,6 +8,7 @@
     "DiscountUrl": "http://localhost:8002"
   },
   "EventBusSettings": {
-    "HostAddress": "amqp://guest:guest@localhost:7652"
+    //"HostAddress": "amqp://guest:guest@localhost:7652"
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
 }
