--- a/Services/Ordering/Order.API/appsettings.json
+++ b/Services/Ordering/Order.API/appsettings.json
@@ -9,7 +9,8 @@
     }
   },
   "EventBusSettings": {
-    "HostAddress": "amqp://guest:guest@localhost:7652"
+    //"HostAddress": "amqp://guest:guest@localhost:7652"
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   },
   "AllowedHosts": "*"
 }
