--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -6,5 +6,11 @@
     "CollectionName": "Products",
     "BrandsCollection": "Brands",
     "TypesCollection": "Types"
+  },
+  "ElasticConfiguration": {
+    "URI": "http://localhost:9200"
+  },
+  "SeqConfiguration": {
+    "URI": "http://localhost:5341"
   }
 }
