--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -14,5 +14,11 @@
       //GRPC will be listing to http2 rather than http
       "Protocols": "Http2"
     }
+  },
+  "ElasticConfiguration": {
+    "URI": "http://localhost:9200"
+  },
+  "SeqConfiguration": {
+    "URI": "http://localhost:5341"
   }
 }
