--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -10,5 +10,11 @@
   "EventBusSettings": {
     //"HostAddress": "amqp://guest:guest@localhost:7652"
     "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "ElasticConfiguration": {
+    "URI": "http://localhost:9200"
+  },
+  "SeqConfiguration": {
+    "URI": "http://localhost:5341"
   }
 }
