--- a/Services/Ordering/Order.API/appsettings.json
+++ b/Services/Ordering/Order.API/appsettings.json
@@ -12,5 +12,11 @@
     //"HostAddress": "amqp://guest:guest@localhost:7652"
     "HostAddress": "amqp://guest:guest@localhost:5672"
   },
+  "ElasticConfiguration": {
+    "URI": "http://localhost:9200"
+  },
+  "SeqConfiguration": {
+    "URI": "http://localhost:5341"
+  },
   "AllowedHosts": "*"
 }
